grammar.js
		source_file: ($) => choice($.expressions, $.where_clause),

		// Tokens
		semi_colon: (_) => token(';'),
		keyword_overwrite: (_) => make_keyword('OVERWRITE'),
		keyword_on: (_) => make_keyword('ON'),
		keyword_select: (_) => make_keyword('SELECT'),
		keyword_from: (_) => make_keyword('FROM'),
		keyword_as: (_) => make_keyword('AS'),
		keyword_by: (_) => make_keyword('BY'),
		keyword_order: (_) => make_keyword('ORDER'),
		keyword_define: (_) => make_keyword('DEFINE'),
		keyword_field: (_) => make_keyword('FIELD'),
		keyword_api: (_) => make_keyword('API'),
		keyword_remove: (_) => make_keyword('REMOVE'),
		keyword_create: (_) => make_keyword('CREATE'),
		keyword_delete: (_) => make_keyword('DELETE'),
		keyword_update: (_) => make_keyword('UPDATE'),
		keyword_then: (_) => make_keyword('THEN'),
		keyword_middleware: (_) => make_keyword('MIDDLEWARE'),
		keyword_type: (_) => make_keyword('TYPE'),
		keyword_tempfiles: (_) => make_keyword('TEMPFILES'),
		keyword_version: (_) => make_keyword('VERSION'),
		keyword_module: (_) => make_keyword('MODULE'),
		keyword_backend: (_) => make_keyword('BACKEND'),
		keyword_ignore: (_) => make_keyword('IGNORE'),
		keyword_cascade: (_) => make_keyword('CASCADE'),
		keyword_reject: (_) => make_keyword('REJECT'),
		keyword_for: (_) => make_keyword('FOR'),
		keyword_unset: (_) => make_keyword('UNSET'),
		keyword_set: (_) => make_keyword('SET'),
		keyword_reference: (_) => make_keyword('REFERENCE'),
		keyword_computed: (_) => make_keyword('COMPUTED'),
		keyword_bucket: (_) => make_keyword('BUCKET'),
		expressions: ($) =>
			seq(
				$.expression,
				repeat(seq($.semi_colon, $.expression)),
				optional($.semi_colon),
			),

		expression: ($) =>
			choice($.primary_statement, $.subquery_statement, $.value),

		// Statements

		// Top level statements
		subquery_statement: ($) =>
			choice(
				$.select_statement,
				$.if_statement,
				$.let_statement,
				$.alter_statement,
				$.delete_statement,
				$.create_statement,
				$.update_statement,
				$.upsert_statement,
				$.remove_statement,
				$.return_statement,
				$.insert_statement,
				$.relate_statement,
				$.for_statement,
				$.show_statement,
				$.define_analyzer_statement,
				$.define_database_statement,
				$.define_event_statement,
				$.define_field_statement,
				$.define_function_statement,
				$.define_index_statement,
				$.define_namespace_statement,
				$.define_param_statement,
				$.define_scope_statement,
				$.define_access_statement,
				$.define_api_statement,
				$.define_module_statement,
				$.define_bucket_statement,
				$.define_table_statement,
				$.define_token_statement,
				$.define_user_statement,
				$.rebuild_index_statement,
			),

		define_field_statement: ($) =>
			seq(
				$.keyword_define,
				$.keyword_field,
				optional(choice($.if_not_exists_clause, $.keyword_overwrite)),
				commaSeparated($.inclusive_predicate),
				$.on_table_clause,
				repeat(
					choice(
						$.type_clause,
						$.default_clause,
						$.computed_clause,
						$.reference_clause,
						$.readonly_clause,
						$.value_clause,
						$.assert_clause,
						$.permissions_for_clause,
						$.comment_clause,
					),
				),
			),

		define_api_statement: ($) =>
			seq(
				$.keyword_define,
				$.keyword_api,
				optional(choice($.if_not_exists_clause, $.keyword_overwrite)),
				$.value,
				optional($.api_for_clause),
				optional($.api_middleware_clause),
				optional($.api_then_clause),
				optional($.permissions_expression_clause),
			),

		define_module_statement: ($) =>
			seq(
				$.keyword_define,
				$.keyword_module,
				optional(choice($.if_not_exists_clause, $.keyword_overwrite)),
				$.module_name,
				$.keyword_as,
				choice($.string, $.prefixed_string),
			),

		define_bucket_statement: ($) =>
			seq(
				$.keyword_define,
				$.keyword_bucket,
				optional(choice($.if_not_exists_clause, $.keyword_overwrite)),
				$.identifier,
				optional($.bucket_backend_clause),
				optional($.permissions_expression_clause),
				optional($.comment_clause),
			),

		remove_statement: ($) =>
			seq(
				$.keyword_remove,
				choice(
					seq($.keyword_api, optional($.if_exists_clause), $.value),
					seq(
						$.keyword_bucket,
						optional($.if_exists_clause),
						$.value,
					),
					seq(
						$.keyword_namespace,
						optional($.if_exists_clause),
						$.identifier,
					),
					seq(
						$.keyword_database,
						optional($.if_exists_clause),
						$.identifier,
					),
					seq(
						$.keyword_user,
						optional($.if_exists_clause),
						$.identifier,
						$.keyword_on,
						choice(
							$.keyword_root,
							$.keyword_namespace,
							$.keyword_database,
						),
					),
					seq(
						$.keyword_token,
						optional($.if_exists_clause),
						$.identifier,
						$.keyword_on,
						choice(
							$.keyword_root,
							$.keyword_namespace,
							$.keyword_scope,
						),
					),
					seq(
						$.keyword_event,
						optional($.if_exists_clause),
						$.identifier,
						optional(seq($.keyword_on, $.keyword_table)),
						$.identifier,
					),
					seq(
						$.keyword_field,
						optional($.if_exists_clause),
						$.identifier,
						optional(seq($.keyword_on, $.keyword_table)),
						$.identifier,
					),
					seq(
						$.keyword_index,
						optional($.if_exists_clause),
						$.identifier,
						optional(seq($.keyword_on, $.keyword_table)),
						$.identifier,
					),
					seq(
						$.keyword_analyzer,
						optional($.if_exists_clause),
						$.identifier,
					),
					seq(
						$.keyword_function,
						optional($.if_exists_clause),
						$.custom_function_name,
					),
					seq(
						$.keyword_param,
						optional($.if_exists_clause),
						$.variable_name,
					),
					seq(
						$.keyword_scope,
						optional($.if_exists_clause),
						$.identifier,
					),
					seq(
						$.keyword_table,
						optional($.if_exists_clause),
						$.identifier,
					),
				),
			),

		create_statement: ($) =>
			seq(
				$.keyword_create,
				optional($.keyword_only),
				$.create_target,
				optional(choice($.content_clause, $.set_clause)),
				optional($.version_clause),
				optional($.return_clause),
				optional($.timeout_clause),
			),

		update_statement: ($) =>
			seq(
				$.keyword_update,
				optional($.keyword_only),
				choice(
					$.primary_statement,
					seq(
						commaSeparated($.value),
						choice(
							$.patch_clause,
							seq(
								optional(
									choice(
										$.content_clause,
										$.merge_clause,
										$.set_clause,
										$.unset_clause,
									),
								),
								optional($.where_clause),
								optional($.return_clause),
								optional($.timeout_clause),
								optional($.parallel_clause),
							),
						),
					),
				),
			),

		select_statement: ($) =>
			seq($.select_clause, optional($.omit_clause), $.from_clause),

		select_clause: ($) =>
			seq(
				$.keyword_select,
				choice(
					seq($.keyword_value, $.predicate),
					commaSeparated($.inclusive_predicate),
				),
			),

		from_clause: ($) =>
			seq(
				$.keyword_from,
				optional($.keyword_only),
				choice(
					$.primary_statement,
					seq(
						commaSeparated($.value),
						optional($.with_clause),
						optional($.version_clause),
						optional($.where_clause),
						optional($.split_clause),
						optional($.group_clause),
						optional($.order_clause),
						optional($.tempfiles_clause),
						optional($.version_clause),
						optional($.limit_clause),
						optional($.fetch_clause),
						optional($.timeout_clause),
						optional($.parallel_clause),
						optional($.explain_clause),
					),
				),
			),

		order_clause: ($) =>
			seq(
				$.keyword_order,
				optional($.keyword_by),
				commaSeparated($.order_criteria),
			),

		order_criteria: ($) =>
			seq(
				$.value,
				optional(
					choice(
						$.keyword_rand,
						$.keyword_collate,
						$.keyword_numeric,
					),
				),
				optional(choice($.keyword_asc, $.keyword_desc)),
			),

		tempfiles_clause: ($) => $.keyword_tempfiles,
		version_clause: ($) => seq($.keyword_version, $.value),
		on_table_clause: ($) =>
			seq($.keyword_on, optional($.keyword_table), $.identifier),

		api_for_clause: ($) => seq($.keyword_for, commaSeparated($.api_method)),

		api_method: ($) =>
			choice(
				$.identifier,
				$.keyword_create,
				$.keyword_delete,
				$.keyword_patch,
				$.keyword_update,
			),

		api_middleware_clause: ($) =>
			seq(
				$.keyword_middleware,
				commaSeparated(choice($.function_call, $.path)),
			),

		api_then_clause: ($) => seq($.keyword_then, $.block),

		bucket_backend_clause: ($) =>
			seq(
				$.keyword_backend,
				choice($.identifier, $.string, $.prefixed_string),
			),

		module_name: ($) =>
			choice(
				$.identifier,
				seq($.identifier, repeat1(seq('::', $.identifier))),
			),

		type_clause: ($) =>
			seq(optional($.keyword_flexible), $.keyword_type, $.type),

		computed_clause: ($) => seq($.keyword_computed, $.value),
		reference_clause: ($) =>
			seq($.keyword_reference, optional($.reference_on_delete_clause)),
		reference_on_delete_clause: ($) =>
			seq(
				$.keyword_on,
				$.keyword_delete,
				choice(
					$.keyword_ignore,
					$.keyword_unset,
					$.keyword_cascade,
					$.keyword_reject,
					seq($.keyword_then, $.block),
				),
			),

		block: ($) => seq('{', optional($.expressions), '}'),

		create_target: ($) => choice(commaSeparated($.value), $.multi_record),

		set_clause: ($) =>
			seq($.keyword_set, commaSeparated($.field_assignment)),

		field_assignment: ($) =>
			seq($.identifier, $.assignment_operator, $.value),

		// Value-related rules
		value: ($) =>
			choice(
				$.base_value,
				$.cast_expression,
				$.binary_expression,
				$.path,
				$.function_call,
				$.negated_expression,
				$.range,
			),

		function_call: ($) =>
			choice(
				seq($.keyword_count, $.argument_list_count),
				seq(
					choice(
						$.builtin_function_name,
						$.function_name,
						$.custom_function_name,
						$.keyword_rand,
					),
					optional($.version),
					$.argument_list,
				),
			),

		base_value: ($) =>
			choice(
				$.string,
				$.prefixed_string,
				$.number,
				$.keyword_true,
				$.keyword_false,
				$.keyword_none,
				$.keyword_null,
				$.variable_name,
				$.identifier,
				$.array,
				$.record_id,
				$.sub_query,
				$.object,
				$.duration,
				$.point,
			),

		cast_expression: ($) => prec.left(seq('<', $.type_name, '>', $.value)),

		binary_expression: ($) => prec.left(seq($.value, $.operator, $.value)),

		path: ($) =>
			choice(
				seq($.base_value, repeat1($.path_element)),
				seq($.function_call, repeat1($.path_element)),
				seq($.graph_path, repeat($.path_element)),
			),

		path_element: ($) => choice($.graph_path, $.subscript, $.filter),

		graph_path: ($) =>
			seq(
				choice('<-', '->', '<->', '<~'),
				choice(
					$.identifier,
					'?',
					$.graph_reference_target,
					seq('(', commaSeparated($.graph_predicate), ')'),
				),
			),
		graph_reference_target: ($) =>
			seq('(', $.identifier, $.keyword_field, repeat1($.identifier), ')'),

		predicate: ($) =>
			choice($.value, seq($.value, $.keyword_as, $.identifier)),

		inclusive_predicate: ($) => choice('*', $.predicate),

		subscript: ($) =>
			seq(
				'.',
				choice(
					prec(1, seq($.identifier, $.argument_list)),
					seq($.function_name, $.argument_list),
					$.identifier,
					'*',
				),
			),

		argument_list: ($) => seq('(', optional(commaSeparated($.value)), ')'),

		type_name: (_) => /[a-zA-Z_][a-zA-Z0-9_]*/,

		type: ($) =>
			choice(
				$.union_type,
				$.parameterized_type,
				$.composite_type,
				$.type_name,
				$.type_object,
			),

		parameterized_type: ($) =>
			seq(
				$.type_name,
				'<',
				commaSeparated(choice($.type, $.literal_value)),
				'>',
			),

		string: (_) => /'[^'\\]*(?:\\.[^'\\]*)*'|"[^"\\]*(?:\\.[^"\\]*)*"/,
		prefixed_string: (_) =>
			/[fruds](?:'[^'\\]*(?:\\.[^'\\]*)*'|"[^"\\]*(?:\\.[^"\\]*)*")/,
		number: ($) => choice($.int, $.float, $.decimal),
		int: (_) => /-?[0-9]+/,
		variable_name: (_) => /\$[a-zA-Z_][a-zA-Z0-9_]*/,
		identifier: (_) => /[a-zA-Z_][a-zA-Z0-9_]*/,
		builtin_function_name: (_) =>
			token(
				prec(
					1,
					/(array|crypto|duration|encoding|geo|http|math|meta|not|object|parse|rand|record|search|session|sleep|string|time|type|vector)::[a-zA-Z_][a-zA-Z0-9_]*(::[a-zA-Z_][a-zA-Z0-9_]*)?/,
				),
			),
		object: ($) => seq('{', optional($.object_content), '}'),
		object_content: ($) => commaSeparatedTrailing($.object_property),
		object_property: ($) =>
			seq(choice($.object_key, $.string), ':', $.value),
		object_key: (_) => /[a-zA-Z_][a-zA-Z0-9_]*/,

		record_id: ($) =>
			prec.left(
				seq(
					$.object_key,
					':',
					choice($.record_id_value, $.record_id_range),
				),
			),
		record_id_value: ($) =>
			choice($.record_id_ident, $.int, $.array, $.object),
		record_id_ident: (_) => /[a-zA-Z0-9_]+/,
		sub_query: ($) => seq('(', $.expression, ')'),
		duration: ($) => repeat1($.duration_part),
		duration_part: (_) => /[0-9]+\s*(ns|us|µs|ms|s|m|h|d|w|y)/,
		operator: ($) =>
			choice(
				$.binary_operator,
				'-',
				'=',
				'>',
				'<',
				'%',
				$.keyword_and,
				$.keyword_or,
				$.keyword_is,
				seq($.keyword_is, $.keyword_not),
				$.keyword_contains,
				$.keyword_contains_not,
				$.keyword_contains_all,
				$.keyword_contains_any,
				$.keyword_contains_none,
				$.keyword_inside,
				$.keyword_in,
				$.keyword_not_inside,
				seq($.keyword_not, $.keyword_in),
				$.keyword_all_inside,
				$.keyword_any_inside,
				$.keyword_none_inside,
				$.keyword_outside,
				$.keyword_intersects,
				seq('@', $.int, '@'),
				seq('<|', $.int, optional(seq(',', $.distance_values)), '|>'),
			),

		binary_operator: (_) =>
			choice(
				'&&',
				'||',
				'??',
				'?:',
				'!=',
				'==',
				'?=',
				'*=',
				'~',
				'!~',
				'*~',
				'<=',
				'>=',
				'+',
				'+=',
				'-=',
				'*',
				'×',
				'/',
				'÷',
				'**',
				...['∋', '∌', '⊇', '⊃', '⊅', '∈', '∉', '⊆', '⊂', '⊄'],
				'@@',
			),

		assignment_operator: (_) => choice('=', '+=', '-='),
	},
});

function commaSeparated(rule) {
	return seq(rule, repeat(seq(',', rule)));
}

function commaSeparatedTrailing(rule) {
	return seq(rule, repeat(seq(',', rule)), optional(','));
}

function make_keyword(word) {
	return new RegExp(
		[...word].map((c) => `[${c.toLowerCase()}${c.toUpperCase()}]`).join(''),
	);
}
