test/corpus/ddl_api_module_bucket.txt
==================
Define API Full
==================

DEFINE API "/test"
    FOR get, post 
        MIDDLEWARE
            api::timeout(1s)
        THEN {
            {
                status: 200,
                body: {
                    request: $request.body,
                    response: "The server works"
                },
                headers: {
                    'last-modified': <string>time::now(),
                    'expires': <string>(time::now() + 4d)
                }
            };
        };

---

(source_file
  (expressions
    (expression
      (subquery_statement
        (define_api_statement
          (keyword_define)
          (keyword_api)
          (value
            (base_value
              (string)))
          (api_for_clause
            (keyword_for)
            (api_method
              (identifier))
            (api_method
              (identifier)))
          (api_middleware_clause
            (keyword_middleware)
            (function_call
              (builtin_function_name)
              (argument_list
                (value
                  (base_value
                    (duration
                      (duration_part)))))))
          (api_then_clause
            (keyword_then)
            (block
              (expressions
                (expression
                  (value
                    (base_value
                      (object
                        (object_content
                          (object_property
                            (object_key)
                            (value
                              (base_value
                                (number
                                  (int)))))
                          (object_property
                            (object_key)
                            (value
                              (base_value
                                (object
                                  (object_content
                                    (object_property
                                      (object_key)
                                      (value
                                        (path
                                          (base_value
                                            (variable_name))
                                          (path_element
                                            (subscript
                                              (identifier))))))
                                    (object_property
                                      (object_key)
                                      (value
                                        (base_value
                                          (string)))))))))
                          (object_property
                            (object_key)
                            (value
                              (base_value
                                (object
                                  (object_content
                                    (object_property
                                      (string)
                                      (value
                                        (cast_expression
                                          (type_name)
                                          (value
                                            (function_call
                                              (builtin_function_name)
                                              (argument_list))))))
                                    (object_property
                                      (string)
                                      (value
                                        (cast_expression
                                          (type_name)
                                          (value
                                            (base_value
                                              (sub_query
                                                (expression
                                                  (value
                                                    (binary_expression
                                                      (value
                                                        (function_call
                                                          (builtin_function_name)
                                                          (argument_list)))
                                                      (operator
                                                        (binary_operator))
                                                      (value
                                                        (base_value
                                                          (duration
                                                            (duration_part)))))))))))))))))))))))
                (semi_colon)))))))
    (semi_colon)))

==================
Define Module
==================

DEFINE MODULE mod::test AS f"test:/demo.surli";

---

(source_file
  (expressions
    (expression
      (subquery_statement
        (define_module_statement
          (keyword_define)
          (keyword_module)
          (module_name
            (identifier)
            (identifier))
          (keyword_as)
          (prefixed_string))))
    (semi_colon)))

==================
Define Bucket
==================

DEFINE BUCKET my_bucket BACKEND "memory";

---

(source_file
  (expressions
    (expression
      (subquery_statement
        (define_bucket_statement
          (keyword_define)
          (keyword_bucket)
          (identifier)
          (bucket_backend_clause
            (keyword_backend)
            (string)))))
    (semi_colon)))

==================
File Uri Calls
==================

f"my_bucket:/my_book.txt".put("Once there were four children whose names were Peter, Susan, Edmund, and Lucy.");
f"my_bucket:/my_book.txt".get();
f"my_bucket:/my_book.txt".copy(f"my_bucket:/my_book_backup.txt");

---

(source_file
  (expressions
    (expression
      (value
        (path
          (base_value
            (prefixed_string))
          (path_element
            (subscript
              (identifier)
              (argument_list
                (value
                  (base_value
                    (string)))))))))
    (semi_colon)
    (expression
      (value
        (path
          (base_value
            (prefixed_string))
          (path_element
            (subscript
              (identifier)
              (argument_list))))))
    (semi_colon)
    (expression
      (value
        (path
          (base_value
            (prefixed_string))
          (path_element
            (subscript
              (identifier)
              (argument_list
                (value
                  (base_value
                    (prefixed_string)))))))))
    (semi_colon)))

==================
Remove API And Bucket
==================

REMOVE API '/api';
REMOVE BUCKET 'bucket';

---

(source_file
  (expressions
    (expression
      (subquery_statement
        (remove_statement
          (keyword_remove)
          (keyword_api)
          (value
            (base_value
              (string))))))
    (semi_colon)
    (expression
      (subquery_statement
        (remove_statement
          (keyword_remove)
          (keyword_bucket)
          (value
            (base_value
              (string))))))
    (semi_colon)))

==================
Define Field Computed Graph Arrow
==================

DEFINE FIELD OVERWRITE facilities ON organization
	COMPUTED <~facility;

---

(source_file
  (expressions
    (expression
      (subquery_statement
        (define_field_statement
          (keyword_define)
          (keyword_field)
          (keyword_overwrite)
          (inclusive_predicate
            (predicate
              (value
                (base_value
                  (identifier)))))
          (on_table_clause
            (keyword_on)
            (identifier))
          (computed_clause
            (keyword_computed)
            (value
              (path
                (graph_path
                  (identifier))))))))
    (semi_colon)))

==================
Select Tempfiles
==================

SELECT * FROM person ORDER BY name TEMPFILES;

---

(source_file
  (expressions
    (expression
      (subquery_statement
        (select_statement
          (select_clause
            (keyword_select)
            (inclusive_predicate))
          (from_clause
            (keyword_from)
            (value
              (base_value
                (identifier)))
            (order_clause
              (keyword_order)
              (keyword_by)
              (order_criteria
                (value
                  (base_value
                    (identifier)))))
            (tempfiles_clause
              (keyword_tempfiles))))))
    (semi_colon)))

==================
Create Version Clause
==================

CREATE user:john SET name = 'John' VERSION d'2025-08-19T08:00:00Z';

---

(source_file
  (expressions
    (expression
      (subquery_statement
        (create_statement
          (keyword_create)
          (create_target
            (value
              (base_value
                (record_id
                  (object_key)
                  (record_id_value
                    (record_id_ident))))))
          (set_clause
            (keyword_set)
            (field_assignment
              (identifier)
              (assignment_operator)
              (value
                (base_value
                  (string)))))
          (version_clause
            (keyword_version)
            (value
              (base_value
                (datetime)))))))
    (semi_colon)))

==================
Define Field Reference Variants
==================

DEFINE FIELD comics ON person TYPE option<array<record<comic_book>>> REFERENCE;
DEFINE FIELD borrowed_comics ON person TYPE option<array<record<comic_book>>> REFERENCE;
DEFINE FIELD owned_by ON comic_book COMPUTED <~(person FIELD comics);
DEFINE FIELD borrowed_by ON comic_book COMPUTED <~(person FIELD borrowed_comics);
DEFINE FIELD all_readers ON comic_book COMPUTED <~(person FIELD comics borrowed_comics);

DEFINE FIELD friends ON person TYPE option<array<record<person>>> REFERENCE ON DELETE IGNORE;
DEFINE FIELD comments ON person TYPE option<array<record<comment>>> REFERENCE ON DELETE UNSET;
DEFINE FIELD author ON comment TYPE record<person> REFERENCE ON DELETE CASCADE;
DEFINE FIELD connected_to ON utility TYPE option<array<record<house>>> REFERENCE ON DELETE REJECT;
DEFINE FIELD comments ON person TYPE option<array<record<comment>>> REFERENCE ON DELETE THEN {
    UPDATE $this SET
        deleted_comments += $reference,
        comments -= $reference;
};

---

(source_file
  (expressions
    (expression
      (subquery_statement
        (define_field_statement
          (keyword_define)
          (keyword_field)
          (inclusive_predicate
            (predicate
              (value
                (base_value
                  (identifier)))))
          (on_table_clause
            (keyword_on)
            (identifier))
          (type_clause
            (keyword_type)
            (type
              (parameterized_type
                (type_name)
                (type
                  (parameterized_type
                    (type_name)
                    (type
                      (parameterized_type
                        (type_name)
                        (type
                          (type_name)))))))))
          (reference_clause
            (keyword_reference)))))
    (semi_colon)
    (expression
      (subquery_statement
        (define_field_statement
          (keyword_define)
          (keyword_field)
          (inclusive_predicate
            (predicate
              (value
                (base_value
                  (identifier)))))
          (on_table_clause
            (keyword_on)
            (identifier))
          (type_clause
            (keyword_type)
            (type
              (parameterized_type
                (type_name)
                (type
                  (parameterized_type
                    (type_name)
                    (type
                      (parameterized_type
                        (type_name)
                        (type
                          (type_name)))))))))
          (reference_clause
            (keyword_reference)))))
    (semi_colon)
    (expression
      (subquery_statement
        (define_field_statement
          (keyword_define)
          (keyword_field)
          (inclusive_predicate
            (predicate
              (value
                (base_value
                  (identifier)))))
          (on_table_clause
            (keyword_on)
            (identifier))
          (computed_clause
            (keyword_computed)
            (value
              (path
                (graph_path
                  (graph_reference_target
                    (identifier)
                    (keyword_field)
                    (identifier)))))))))
    (semi_colon)
    (expression
      (subquery_statement
        (define_field_statement
          (keyword_define)
          (keyword_field)
          (inclusive_predicate
            (predicate
              (value
                (base_value
                  (identifier)))))
          (on_table_clause
            (keyword_on)
            (identifier))
          (computed_clause
            (keyword_computed)
            (value
              (path
                (graph_path
                  (graph_reference_target
                    (identifier)
                    (keyword_field)
                    (identifier)))))))))
    (semi_colon)
    (expression
      (subquery_statement
        (define_field_statement
          (keyword_define)
          (keyword_field)
          (inclusive_predicate
            (predicate
              (value
                (base_value
                  (identifier)))))
          (on_table_clause
            (keyword_on)
            (identifier))
          (computed_clause
            (keyword_computed)
            (value
              (path
                (graph_path
                  (graph_reference_target
                    (identifier)
                    (keyword_field)
                    (identifier)
                    (identifier)))))))))
    (semi_colon)
    (expression
      (subquery_statement
        (define_field_statement
          (keyword_define)
          (keyword_field)
          (inclusive_predicate
            (predicate
              (value
                (base_value
                  (identifier)))))
          (on_table_clause
            (keyword_on)
            (identifier))
          (type_clause
            (keyword_type)
            (type
              (parameterized_type
                (type_name)
                (type
                  (parameterized_type
                    (type_name)
                    (type
                      (parameterized_type
                        (type_name)
                        (type
                          (type_name)))))))))
          (reference_clause
            (keyword_reference)
            (reference_on_delete_clause
              (keyword_on)
              (keyword_delete)
              (keyword_ignore))))))
    (semi_colon)
    (expression
      (subquery_statement
        (define_field_statement
          (keyword_define)
          (keyword_field)
          (inclusive_predicate
            (predicate
              (value
                (base_value
                  (identifier)))))
          (on_table_clause
            (keyword_on)
            (identifier))
          (type_clause
            (keyword_type)
            (type
              (parameterized_type
                (type_name)
                (type
                  (parameterized_type
                    (type_name)
                    (type
                      (parameterized_type
                        (type_name)
                        (type
                          (type_name)))))))))
          (reference_clause
            (keyword_reference)
            (reference_on_delete_clause
              (keyword_on)
              (keyword_delete)
              (keyword_unset))))))
    (semi_colon)
    (expression
      (subquery_statement
        (define_field_statement
          (keyword_define)
          (keyword_field)
          (inclusive_predicate
            (predicate
              (value
                (base_value
                  (identifier)))))
          (on_table_clause
            (keyword_on)
            (identifier))
          (type_clause
            (keyword_type)
            (type
              (parameterized_type
                (type_name)
                (type
                  (type_name)))))
          (reference_clause
            (keyword_reference)
            (reference_on_delete_clause
              (keyword_on)
              (keyword_delete)
              (keyword_cascade))))))
    (semi_colon)
    (expression
      (subquery_statement
        (define_field_statement
          (keyword_define)
          (keyword_field)
          (inclusive_predicate
            (predicate
              (value
                (base_value
                  (identifier)))))
          (on_table_clause
            (keyword_on)
            (identifier))
          (type_clause
            (keyword_type)
            (type
              (parameterized_type
                (type_name)
                (type
                  (parameterized_type
                    (type_name)
                    (type
                      (parameterized_type
                        (type_name)
                        (type
                          (type_name)))))))))
          (reference_clause
            (keyword_reference)
            (reference_on_delete_clause
              (keyword_on)
              (keyword_delete)
              (keyword_reject))))))
    (semi_colon)
    (expression
      (subquery_statement
        (define_field_statement
          (keyword_define)
          (keyword_field)
          (inclusive_predicate
            (predicate
              (value
                (base_value
                  (identifier)))))
          (on_table_clause
            (keyword_on)
            (identifier))
          (type_clause
            (keyword_type)
            (type
              (parameterized_type
                (type_name)
                (type
                  (parameterized_type
                    (type_name)
                    (type
                      (parameterized_type
                        (type_name)
                        (type
                          (type_name)))))))))
          (reference_clause
            (keyword_reference)
            (reference_on_delete_clause
              (keyword_on)
              (keyword_delete)
              (keyword_then)
              (block
                (expressions
                  (expression
                    (subquery_statement
                      (update_statement
                        (keyword_update)
                        (value
                          (base_value
                            (variable_name)))
                        (set_clause
                          (keyword_set)
                          (field_assignment
                            (identifier)
                            (assignment_operator)
                            (value
                              (base_value
                                (variable_name))))
                          (field_assignment
                            (identifier)
                            (assignment_operator)
                            (value
                              (base_value
                                (variable_name))))))))
                  (semi_colon))))))))
    (semi_colon)))

==================
Select Version Clause
==================

SELECT * FROM person VERSION d'2025-08-19T08:00:00Z';
SELECT * FROM person ORDER BY name TEMPFILES VERSION d'2025-08-19T08:00:00Z';

---

(source_file
  (expressions
    (expression
      (subquery_statement
        (select_statement
          (select_clause
            (keyword_select)
            (inclusive_predicate))
          (from_clause
            (keyword_from)
            (value
              (base_value
                (identifier)))
            (version_clause
              (keyword_version)
              (value
                (base_value
                  (datetime))))))))
    (semi_colon)
    (expression
      (subquery_statement
        (select_statement
          (select_clause
            (keyword_select)
            (inclusive_predicate))
          (from_clause
            (keyword_from)
            (value
              (base_value
                (identifier)))
            (order_clause
              (keyword_order)
              (keyword_by)
              (order_criteria
                (value
                  (base_value
                    (identifier)))))
            (tempfiles_clause
              (keyword_tempfiles))
            (version_clause
              (keyword_version)
              (value
                (base_value
                  (datetime))))))))
    (semi_colon)))
